Manual changes required to calculate coverage-reports - not cover did not warn me that jacoco was missing