@@ -42,7 +42,7 @@
         <maven-project-info-reports-plugin.version>3.4.2</maven-project-info-reports-plugin.version>
         <maven-checkstyle-plugin.version>3.2.1</maven-checkstyle-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
         <versions-maven-plugin.version>2.15.0</versions-maven-plugin.version>
@@ -347,8 +347,21 @@
             <artifactId>gson</artifactId>
             <version>2.11.0</version>
         </dependency>
-    </dependencies>
 
+      <dependency>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.13</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId>
+          <version>5.10.3</version>
+          <scope>test</scope>
+      </dependency>
+
+    </dependencies>
 
     <profiles>
         <profile>
@@ -644,11 +657,31 @@
                 <configuration>
                     <forkCount>4C</forkCount>
                     <reuseForks>false</reuseForks>
-                    <argLine>-mx6G --add-opens java.base/java.time=ALL-UNNAMED --add-opens
-                        java.base/java.util=ALL-UNNAMED --add-opens
-                        net.finmath.smartderivativecontract/net.finmath.smartcontract.model=ALL-UNNAMED
-                    </argLine>
+<!--                    <argLine>-mx6G &#45;&#45;add-opens java.base/java.time=ALL-UNNAMED &#45;&#45;add-opens-->
+<!--                        java.base/java.util=ALL-UNNAMED &#45;&#45;add-opens-->
+<!--                        net.finmath.smartderivativecontract/net.finmath.smartcontract.model=ALL-UNNAMED-->
+<!--                    </argLine>-->
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.13</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
